--- a/home_style.css
+++ b/home_style.css
@@ -85,6 +85,7 @@ p,h1, h2, h3, h4, h5, h6{
     margin-right: 5px;
     border-radius: 50px 50px 50px 50px;
     outline: none;
+    padding: 12px;
 }
 .logo img{
     height: 60px;
@@ -450,7 +451,7 @@ margin: 8px;
 
 }
 .image img{
-    height: 300px;
+    height: 200px;
     width: 100%;
     border-radius: 15px;
 
